--- a/Server/CDAC_Project_WebBasedRecruitmentSystem/.gitignore
+++ b/Server/CDAC_Project_WebBasedRecruitmentSystem/.gitignore
@@ -31,3 +31,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### application properties file ###
+application-dev.properties
+application-prod.properties
