--- a/Server/CDAC_Project_WebBasedRecruitmentSystem/src/main/resources/application.properties
+++ b/Server/CDAC_Project_WebBasedRecruitmentSystem/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 #server.servlet.session.persistent=false
 #DB properties
-spring.datasource.url=jdbc:mysql://localhost:3306/CDAC_Project?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=adnan
-spring.datasource.password=adnan8435
+# spring.datasource.url=jdbc:mysql://localhost:3306/CDAC_Project?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+# spring.datasource.username=adnan
+# spring.datasource.password=adnan8435
 # JPA properties
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
@@ -24,4 +24,6 @@ server.ssl.key-store-password=test#1234
 server.ssl.key-password=test#1234
 server.ssl.key-alias=jwtdemo
 server.port=7878
+# to activate particular file
+spring.profiles.active=dev
 
